add login form showing after click on CLICK ME button, apply styles and close function

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,17 @@
     </section>
     <div class="popup">
       <!-- Here goes your popup form HTML code -->
+      <form action="/" method="GET" class="form">
+        <span class="close">X</span>
+        <p>Login</p>
+        <input id='email'type="email" placeholder="E-mail">
+        <input id='password'type="password" placeholder="Password">
+        <div class="check">
+          <input type="checkbox" id="checkbox" name="checkbox" required>
+          <label for="checkbox">I Agree to therms & conditions</label>
+        </div>
+          <button class="btn_submit" type="submit">SUBMIT</button>
+      </form>
     </div>
     <script src="js/index.min.js" charset="utf-8"></script>
   </body>
