add simple js validation form and add custom look to checkbox input

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
         <input id='email'type="email" placeholder="E-mail">
         <input id='password'type="password" placeholder="Password">
         <div class="check">
-          <input type="checkbox" id="checkbox" name="checkbox" required>
-          <label for="checkbox">I Agree to therms & conditions</label>
+          <input type="checkbox" id="check" name="checkbox" required>
+          <label for="check" class="label">I agree terms & conditions.</label>
         </div>
           <button class="btn_submit" type="submit">SUBMIT</button>
       </form>
