add 3 seconds timeout to submit function, add THANK YOU message and fix responsive view by hiding CLICK ME button

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <section class="main">
       <button id="show-popup-form" class="btn btn-main">Click me!</button>
       <!-- Display success message below -->
+      <span class="success">Thank you!</span>
     </section>
     <div class="popup">
       <!-- Here goes your popup form HTML code -->
